--- a/views/posts/indexModeratorMainPage.html
+++ b/views/posts/indexModeratorMainPage.html
@@ -10,27 +10,16 @@
   <body>
     <nav class="nav">
       <h1>Jestem moderatorem jupiiiii</h1>
-      <form action="/logout" method="POST">
+    </nav>
+    <div>
+      <form action="/logout"  method="POST">
         <button id="button--logout" class="btn btn-primary">Logout</button>
       </form>
-    </nav>
+      <button id="btn--previous" class="btn btn-danger">Previous</button>
+      <button id="btn--next" class="btn btn-danger">Next</button>
+    </div>
     <div class="containerTable">
-      <table class="table">
-        <tr>
-            <th>LP</th>
-            <th>ID</th>
-            <th>RoleID</th>
-            <th>Change RoleID</th>
-            <th>Name</th>
-            <th>Surname</th>
-            <th>Date of Birth</th>
-            <th>Login</th>
-            <th>Password</th>
-            <th>CreatedAt</th>
-            <th>UpdatedAt</th>
-            <th>DeletedAt</th>
-        </tr>
-    </table>
+      
     </div>
   </body>
 </html>
