--- a/views/posts/indexUserMainPage.html
+++ b/views/posts/indexUserMainPage.html
@@ -14,15 +14,12 @@
         <button id="button--logout" class="btn btn-primary">Logout</button>
       </form>
     </nav>
+    <div>
+      <button id="btn--previous" class="btn btn-danger">Previous</button>
+      <button id="btn--next" class="btn btn-danger">Next</button>
+    </div>
     <div class="containerTable">
-      <table class="table">
-        <tr>
-            <th>LP</th>
-            <th>RoleID</th>
-            <th>Name</th>
-            <th>Surname</th>
-        </tr>
-    </table>
+      
     </div>
   </body>
 </html>
