--- a/views/posts/indexLoginPage.html
+++ b/views/posts/indexLoginPage.html
@@ -10,7 +10,8 @@
     <script defer src="/assets/login.js"></script>
   </head>
 <body>
-    <form class="container" action="/login" method="POST" >
+  <div class="container">
+    <form  action="/login" method="POST" >
       <h1>Login</h1><br>
         <div class="form-group">
           <label for="email">Email address</label>
@@ -20,7 +21,11 @@
           <label for="password">Password</label>
           <input type="password" class="form-control" id="password" name="password" placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button class="btn btn-default">Log in</button>
       </form>
+      <form  action="/register" method="GET" >
+        <button class="btn btn-default">Register</button>
+      </form>
+    </div>
 </body>
 </html>
