--- a/views/posts/indexRegistrationPage.html
+++ b/views/posts/indexRegistrationPage.html
@@ -10,7 +10,8 @@
     <script defer src="/assets/register.js"></script>
   </head>
 <body>
-    <form class="container" action="/register" method="POST" >
+  <div class="container">
+    <form action="/register" method="POST" >
       <h1 class="h1">Register</h1>
         <div class="form-group">
           <label for="name">Name</label>
@@ -32,7 +33,12 @@
           <label for="password">Password</label>
           <input type="password" class="form-control" id="password" name="password" placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button class="btn btn-default">Submit</button>
       </form>
+      <form action="/login" method="GET" >
+        <button class="btn btn-default">Login</button>
+      </form>
+        </div>
+    
 </body>
 </html>
